[tool.poetry]
name = "pet-adopt"
version = "0.1.0"
description = ""
authors = ["Lakhdar Benamer <lakhdar.benamer@external.totalenergies.com>"]
readme = "README.md"
packages = [{include = "pet_adopt"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
